// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`List component renders empty state 1`] = `
<div>
  <section
    aria-busy="false"
  >
    <table
      class="episodes-table"
    >
      <caption>
        Podcast Episodes
      </caption>
      <tbody>
        <tr
          class="empty-row"
        >
          <td
            colspan="3"
          >
            <div
              class="empty-state"
            >
              <p
                class="empty-message"
              >
                Pick a podcast above to see its episodes.
              </p>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </section>
</div>
`;

exports[`List component renders with results 1`] = `
<div>
  <section
    aria-busy="false"
  >
    <table
      class="episodes-table"
    >
      <caption>
        Podcast Episodes
      </caption>
      <thead>
        <tr>
          <th
            scope="col"
          >
            Episode
          </th>
          <th
            class="date-column"
            scope="col"
          >
            Date
          </th>
          <th
            class="duration-column"
            scope="col"
          >
            Duration
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="episode-row"
        >
          <td
            class="episode-title-cell"
          >
            <button
              aria-label="Play episode: Test Episode 1"
              class="episode-title"
              type="button"
            >
              Test Episode 1
            </button>
          </td>
          <td
            class="date-column"
          >
            <time
              datetime="2023-05-15T12:00:00Z"
            >
              May 15, 2023
            </time>
          </td>
          <td
            class="duration-column"
          >
            01:00:00
          </td>
        </tr>
        <tr
          class="episode-row"
        >
          <td
            class="episode-title-cell"
          >
            <button
              aria-label="Play episode: Test Episode 2"
              class="episode-title"
              type="button"
            >
              Test Episode 2
            </button>
          </td>
          <td
            class="date-column"
          >
            <time
              datetime="2023-05-16T12:00:00Z"
            >
              May 16, 2023
            </time>
          </td>
          <td
            class="duration-column"
          >
            00:30:00
          </td>
        </tr>
      </tbody>
    </table>
  </section>
</div>
`;
